Esquema de cores e teste do gif

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
   --bs-psy76: #76efa4;
   --bs-psy9d: #9da5ad;
   --bs-psyff: #fffdf7;
-  --bs-psy29: #293b7a;
+  --bs-psy29: #008080;
   --bs-psyc9: #c9a227;
 
   /* Paleta Bootstrap */
@@ -28,7 +28,7 @@
   --bs-red: #dc3545;
   --bs-orange: #fd7e14;
   --bs-yellow: #ffc107;
-  --bs-green: #198754;
+  --bs-green: #CA3A37; /*  #198754 */
   --bs-teal: #20c997;
   --bs-cyan: #0dcaf0;
   --bs-white: #fff;
