atualizações da página

--- a/views/header.html
+++ b/views/header.html
@@ -19,7 +19,7 @@
                         <!-- <li class="nav-item"><a class="nav-link me-lg-3" href="#">Artigos</a></li> -->
 
                     </ul>
-                    <a target="_blank" href="#">
+                    <a href="#depoimentos">
                         <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0">
                         <span class="d-flex align-items-center">
                             <i class="bi-calendar-week-fill me-2"></i>
